fix icon alignment in nav

--- a/src/routes/editor.module.css
+++ b/src/routes/editor.module.css
@@ -59,7 +59,7 @@
 
                 & > button {
                     display: flex;
-                    justify-content: center;
+                    place-items: center;
                     padding: var(--padding-m);
                     border: none;
                     border-radius: var(--radii-m);
